added clientside and db schema

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,14 @@
 h1= title
 p Welcome to #{title}
+p This is a test page for TestlerAlpha
+
+p
+	span.testler.test-123456 This copy should change to meet test results. 
+	span.other This copy should stay the same. 
+p
+	span The followinf copy should get a new class based on test results
+	span.testler.test-123457
+
+p Thank you and good night
+
+script(type="text/javascript", src="/js/testler-0.0.1.js")
