--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,5 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
+    script(type='text/javascript', src="http://code.jquery.com/jquery.min.js")
   body!= body
