incl connect-redis in lib for nodejitsu and updates

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,8 @@ html
           a(href="/signin") Sign In  
           | or 
           a(href="/auth/logout") Logout
-    h1.logo= title
+    a(href="/")
+      h1.logo= title
     div#wrapper!= body
     div#footer
       .inner
